fixed wait position